charon/tests/ui/simple/fewer-clauses-in-method-impl.2.out

thread 'rustc' panicked at /home/ssyram/.cargo/git/checkouts/hax-dev-e15d4f35f2c07984/822f3e2/frontend/exporter/src/types/new/full_def.rs:473:28:
index out of bounds: the len is 0 but the index is 0
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Hax panicked when translating `test_crate::Trait::method`.
 --> tests/ui/simple/fewer-clauses-in-method-impl.2.rs:4:5
  |
4 | /     fn method()
5 | |     where
6 | |         Self: Sized;
  | |____________________^

error: Item `test_crate::Trait` caused errors; ignoring.
 --> tests/ui/simple/fewer-clauses-in-method-impl.2.rs:3:1
  |
3 | trait Trait {
  | ^^^^^^^^^^^


thread 'rustc' panicked at /home/ssyram/.cargo/git/checkouts/hax-dev-e15d4f35f2c07984/822f3e2/frontend/exporter/src/types/new/full_def.rs:473:28:
index out of bounds: the len is 0 but the index is 0
error: Hax panicked when translating `test_crate::Trait::method`.
 --> tests/ui/simple/fewer-clauses-in-method-impl.2.rs:4:5
  |
4 | /     fn method()
5 | |     where
6 | |         Self: Sized;
  | |____________________^

error: Item `test_crate::{impl#0}` caused errors; ignoring.
 --> tests/ui/simple/fewer-clauses-in-method-impl.2.rs:9:1
  |
9 | impl Trait for () {
  | ^^^^^^^^^^^^^^^^^


thread 'rustc' panicked at /home/ssyram/.cargo/git/checkouts/hax-dev-e15d4f35f2c07984/822f3e2/frontend/exporter/src/types/new/full_def.rs:473:28:
index out of bounds: the len is 0 but the index is 0
error: Hax panicked when translating `test_crate::Trait::method`.
 --> tests/ui/simple/fewer-clauses-in-method-impl.2.rs:4:5
  |
4 | /     fn method()
5 | |     where
6 | |         Self: Sized;
  | |____________________^

ERROR Charon failed to translate this code (5 errors)
